--- a/index.html
+++ b/index.html
@@ -54,28 +54,28 @@
                 <div class="tm-list-item">          
                   <img src="img/agelgel.jpg" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <h3 class="tm-list-item-name">Agelgel Special<span class="tm-list-item-price">750 ETB</span></h3>
+                    <h3 class="tm-list-item-name">Agelgel Special  ------------750 ETB</h3>
                     <p class="tm-list-item-description"></p>
                   </div>
                 </div>
                 <div class="tm-list-item">          
                   <img src="img/shekla.jpg" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <h3 class="tm-list-item-name">Shekla tibs<span class="tm-list-item-price">800 ETB</span></h3>
+                    <h3 class="tm-list-item-name">Shekla tibs  ---------------850 ETB</h3>
                     <p class="tm-list-item-description"></p>
                   </div>
                 </div>
                 <div class="tm-list-item">          
                   <img src="img/gaslight.jpg" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <h3 class="tm-list-item-name">Gas Light<span class="tm-list-item-price">700 ETB</span></h3>
+                    <h3 class="tm-list-item-name">Gas Light -------------------700 ETB</h3>
                     <p class="tm-list-item-description"></p>
                   </div>
                 </div>
                 <div class="tm-list-item">          
                   <img src="img/enkulal.jpg" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <h3 class="tm-list-item-name">Enkulal Firfir<span class="tm-list-item-price">400 ETB</span></h3>
+                    <h3 class="tm-list-item-name">Enkulal Firfir ----------------400 ETB</h3>
                     <p class="tm-list-item-description"></p>
                   </div>
                 </div> 
@@ -89,28 +89,28 @@
                 <div class="tm-list-item">          
                   <img src="img/coke.jpg" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <h3 class="tm-list-item-name">Coke<span class="tm-list-item-price">40 ETB</span></h3>
+                    <h3 class="tm-list-item-name">Coke  -------------- 40 ETB</h3>
                     <p class="tm-list-item-description"></p>              
                   </div>
                 </div>
                 <div class="tm-list-item">          
                   <img src="img/sprite.jpg" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <h3 class="tm-list-item-name">Sprite<span class="tm-list-item-price">40 ETB</span></h3>
+                    <h3 class="tm-list-item-name">Sprite ---------------40 ETB</span></h3>
                     <p class="tm-list-item-description"></p>                    
                   </div>
                 </div>
                 <div class="tm-list-item">          
                   <img src="img/ambo.jpg" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <h3 class="tm-list-item-name">Ambo Weha<span class="tm-list-item-price">40 ETB</span></h3>
+                    <h3 class="tm-list-item-name">Ambo Weha --------------40 ETB</span></h3>
                     <p class="tm-list-item-description"></p>              
                   </div>
                 </div>
                 <div class="tm-list-item">          
                   <img src="img/water.jpg" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <h3 class="tm-list-item-name">Water 2L<span class="tm-list-item-price">35 ETB</span></h3>
+                    <h3 class="tm-list-item-name">Water 2L ----------------35 ETB</h3>
                     <p class="tm-list-item-description"></p>              
                   </div>
                 </div>
@@ -123,28 +123,28 @@
                 <div class="tm-list-item">          
                   <img src="img/habesha.jpg" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <h3 class="tm-list-item-name">Habesha Beer<span class="tm-list-item-price">70 ETB</span></h3>
+                    <h3 class="tm-list-item-name">Habesha Beer --------------70 ETB</h3>
                     <p class="tm-list-item-description"></p>              
                   </div>
                 </div>
                 <div class="tm-list-item">          
                   <img src="img/awash.jpg" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <h3 class="tm-list-item-name">Awash Wine<span class="tm-list-item-price">500 ETB</span></h3>
+                    <h3 class="tm-list-item-name">Awash Wine -----------------500 ETB</h3>
                     <p class="tm-list-item-description"></p>                    
                   </div>
                 </div>
                 <div class="tm-list-item">          
                   <img src="img/single.jpg" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <h3 class="tm-list-item-name">Single<span class="tm-list-item-price">50 ETB</span></h3>
+                    <h3 class="tm-list-item-name">Single ----------------------50 ETB</h3>
                     <p class="tm-list-item-description"></p>              
                   </div>
                 </div>
                 <div class="tm-list-item">          
                   <img src="img/heineken.jpg" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <h3 class="tm-list-item-name">Heineken<span class="tm-list-item-price">100 ETB</span></h3>
+                    <h3 class="tm-list-item-name">Heineken -------------------- 100 ETB</h3>
                     <p class="tm-list-item-description"></p>              
                   </div>
                 </div>              
